--- a/src/Stateless/Main/Main.css
+++ b/src/Stateless/Main/Main.css
@@ -33,13 +33,13 @@ b {
 header {
   width: 100%;
   height: 8vh;
-  background-color: black;
+  background-color: #1c1f24;
   color: white;
   margin: auto;
   position: fixed;
   }
 
-h1, h2, h3, h4, p {
+h1, h2, h3, h4, p, li, a{
   font-family: 'Lato', sans-serif;   
 }
 
@@ -70,23 +70,6 @@ font-size: 50px;
 color: #ffa503;
 }
 
-::-webkit-scrollbar {
-  width: 20px;
-  }
-  
-  ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-  background: orange; 
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-  background: olivedrab; 
-  }
-
 .nav {
   font-size: 16px;
   color: white;
@@ -105,8 +88,11 @@ color: #ffa503;
   }
 
  .active {
-  background-color: orange;
-    
+  color: white;
+  background-color: black;
+  box-shadow: 0px -7px 8px rgba(0,0,0,.5);
+  text-shadow: grey 1px 1px;
+  border-bottom: 2px solid orange;
   }
 
 .menu {
