--- a/src/Stateless/Main/Main.css
+++ b/src/Stateless/Main/Main.css
@@ -39,6 +39,22 @@ header {
   position: fixed;
   }
 
+  .resume {
+    box-shadow: 2px 0px 20px #cecccc;
+    background-image: url('./../../assets/resume.png');
+    height: 70vw;
+    background-size: contain;
+    width: 60%;
+    background-repeat: no-repeat;
+    margin: auto; 
+    margin-top: 15vh;
+  }
+
+  .resume-container{
+    padding: 4vh 0;
+    box-sizing: border-box;
+  }
+
 h1, h2, h3, h4, p, li, a{
   font-family: 'Lato', sans-serif;   
 }
@@ -119,6 +135,11 @@ h3 {
   margin-bottom: 20px;
   }
 
+.social li {
+  width: 11vh;
+  height: 7vh;
+}
+
 .github {
   background-image:url('http://www.guibingzhuche.com/data/out/315/1883639.png');
   background-size: contain;
@@ -126,7 +147,7 @@ h3 {
 }
   
   .linkedin {
-  background-image: url('../../assets/linkedin.png');
+  background-image: url('./../../assets/linkedin.png');
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -144,4 +165,33 @@ h3 {
   margin: auto;
   list-style-type: none;
   margin-bottom: 10vh;
+  }
+
+  .contact-top {
+    background: black;
+    height: 50vh;
+  }
+
+  .contact-bottom {
+    height: 50vh;
+    cursor: url(https://maps.gstatic.com/mapfiles/openhand_8_8.cur), default;
+    background-color: red;
+  }
+
+  .contact-wrapper {
+    padding: 10vh 0;
+    background-color: #1c1f24;
+  }
+
+  .contact-wrapper h2, h1{
+    margin: 0;
+  }
+
+  .black-bgn {
+    margin-top: -10vh;
+    height: 100%;
+    background-color: #000000a6;
+    position: absolute;
+    z-index: 40;
+    width: 100%;
   }
