--- a/src/Stateless/Portfolio/Portfolio.css
+++ b/src/Stateless/Portfolio/Portfolio.css
@@ -235,3 +235,22 @@ flex: 20;
 .social li {
   cursor: pointer;
 }
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: orange; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(187, 163, 25); 
+}
