--- a/src/Stateless/Main/Main.css
+++ b/src/Stateless/Main/Main.css
@@ -8,14 +8,14 @@ background-color: hsla(0,0%,0%,0.4);
  background-size: 100vw 100vh;
  background-repeat: no-repeat;
  text-align: center;
- height: 92vh;
+ height: 920px;
  box-shadow: 2px 2px white;
  background-image: url('./../../assets/Website-Design-Background.png') ;   
  }
 
  .wrapper {
-  height: 83vh;
-  padding-top: 9vh;
+  height: 830px;
+  padding-top: 90px;
   background-color: #00000096;
   width: 100%;
   position: absolute;
@@ -29,7 +29,7 @@ background-color: hsla(0,0%,0%,0.4);
 
 .info-container {
   position: absolute;
-  padding-top: 5vh;
+  padding-top: 50px;
   width: 100%;
 }
 
@@ -44,7 +44,7 @@ b {
 
 header {
   width: 100%;
-  height: 8vh;
+  height: 80px;
   background-color: #1c1f24;
   color: white;
   margin: auto;
@@ -60,11 +60,11 @@ header {
     width: 55%;
     background-repeat: no-repeat;
     margin: auto; 
-    margin-top: 15vh;
+    margin-top: 150px;
   }
 
   .resume-container{
-    padding: 4vh 0;
+    padding: 40px 0;
     box-sizing: border-box;
   }
 
@@ -73,7 +73,7 @@ h1, h2, h3, h4, h5, p, li, a{
 }
 
 h4 {
-  font-size: 3vh;
+  font-size: 30px;
   margin:0;
   color: white;
 }
@@ -81,7 +81,7 @@ h4 {
 h1 { 
   color: #fff;
   opacity: .85;
-  margin: 6vh !important;
+  margin: 60px !important;
   font-size: 5.5vw;
   line-height: 1em;
   position: relative;
@@ -96,10 +96,15 @@ h1 :after, :before {
 .pic-container {
   width: 80%;
   position: absolute;
+  height: 30vh;
+  overflow: hidden;
   z-index: 20;
   display: -ms-flexbox;
   display: flex;
-  margin: 31% 10% 0;
+  bottom: 5vh;
+  margin-left: 10%;
+  margin-right: auto;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -107,10 +112,10 @@ h1 :after, :before {
   display: flex;
   background-color: hsla(0,0%,0%,0.4);
  box-shadow: 2px 2px blanchedalmond;
- background-size: 100vw 100vh;
+ background-size: 100vw 1000px;
  background-repeat: no-repeat;
  text-align: center;
- height: 92vh;
+ height: 920px;
  box-shadow: 2px 2px white;
  background-image: url('https://www.digitalplatforms.co.za/wp-content/uploads/2015/11/Website-Design-Background.png') 
 }
@@ -122,7 +127,7 @@ h1 :after, :before {
   -webkit-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
-  height: 26vh;
+  height: 260px;
   cursor: pointer;
 }
 
@@ -143,10 +148,10 @@ h1 :after, :before {
 
 
 h2 {
-  margin-left: 8vh;
+  margin-left: 80px;
   font-size: 82px;
   color: #ffa503;
-  height: 5vh;
+  height: 50px;
 }
 
 .pic2{
@@ -163,8 +168,6 @@ h2 {
 .pic3{
   background-image: url('./../../assets/movie-tracker.png');
   background-size: cover;
-  
-
 }
 
 
@@ -172,7 +175,7 @@ h2 {
   font-size: 16px;
   color: white;
   cursor: pointer;
-  padding: 3vh;
+  padding: 30px;
   letter-spacing: 3.2px;
   text-decoration: none;
   }
@@ -204,10 +207,10 @@ h2 {
   }
 
 p {
-  font-size: 2.2vh;
+  font-size: 22px;
   color: white;
   line-height: 1.8;
-  word-spacing: 3.7px;
+  word-spacing: 4.5px;
 }
 
 h3 {
@@ -218,8 +221,8 @@ h3 {
   }
 
 .social li {
-  width: 8vh;
-  height: 7vh;
+  width: 80px;
+  height: 70px;
 }
 
 .github {
@@ -232,8 +235,8 @@ h3 {
   background-image: url('./../../assets/linkedin.png');
   background-size: contain;
   background-repeat: no-repeat;
-  height: 5.6vh !important;
-  margin-top: .7vh;
+  height: 56px !important;
+  margin-top: 7px;
 }
   
   .email {
@@ -249,13 +252,13 @@ h3 {
   width: 25%;
   margin: auto;
   list-style-type: none;
-  margin-top: 7vh;
+  margin-top: 70px;
   }
 
   .contact-top {
     display: flex;
     background: black;
-    height: 47vh;
+    height: 470px;
   }
 
   .pic-steph {
@@ -266,20 +269,20 @@ h3 {
   }
 
   .contact-bottom {
-    height: 50vh;
+    height: 500px;
     cursor: url(https://maps.gstatic.com/mapfiles/openhand_8_8.cur), default;
     background-color: grey;
   }
 
   .contact-wrapper {
-    height: 85vh;
-    padding: 8vh 0;
+    height: 850px;
+    padding: 80px 0;
     background-color: black;
     overflow: hidden;
   }
 
   .contact-wrapper h2, h1{
-    margin: 13vh 12vh;
+    margin: 130px 120px;
   }
 
   .black-bgn {
@@ -296,19 +299,19 @@ h3 {
   }
 
   .contact-info {
-    margin-left: 50%;
+    margin-top: 25px;
+    margin-left: 45%;
     background-color: #000000c7;
-    padding: 3.4vh;
+    padding: 34px;
     position: absolute;
     z-index: 32;
-    margin-top: -45vh;
     display: flex;
     box-shadow: 2px -2px 0px black;
   }
 
   .contact-info h5 {
     color: white;
-    font-size: 2.3vh;
+    font-size: 23px;
     letter-spacing: 2px;
   }
 
@@ -319,12 +322,12 @@ h3 {
     font-size: 50px;
     border: 1px solid orange;
     border-radius: 50%;
-    margin-top: 2vh;
+    margin-top: 20px;
   }
 
   .my-info {
-    padding: 0 7vh;
-    margin-left: 10vh;
+    padding: 0 70px;
+    margin-left: 100px;
     border-left: 1px solid orange;
   }
 
@@ -337,27 +340,41 @@ h3 {
   }
 
   .dev-logos {
-    height: 5vh;
-    width: 5vh;
+    height: 50px;
+    width: 50px;
   }
 
   .dev-logo-container {
     display: flex;
-    height: 5vh;
-    padding: 0 7vh 3vh;
+    height: 50px;
+    padding: 0 70px 30px;
   }
 
   .react {
-    margin: -7px 2vh;
+    margin: -7px 20px;
     box-sizing: border-box;
-    width: 10vh;
+    width: 100px;
   }
 
   .fire {
-    margin-top: -1.2vh;
+    margin: -1.20px 10px 0;
   }
 
   iframe {
     width: 100vw;
     height: inherit;
+  }
+
+  .scss {
+    margin: 00px 10px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 70px;
+  }
+
+  .postgres {
+    margin: 00px 10px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 60px;
   }
