--- a/src/Stateless/Main/Main.css
+++ b/src/Stateless/Main/Main.css
@@ -14,7 +14,7 @@ background-color: hsla(0,0%,0%,0.4);
  }
 
  .wrapper {
-  height: 830px;
+  height: 90vh;
   padding-top: 90px;
   background-color: #00000096;
   width: 100%;
@@ -43,7 +43,7 @@ b {
 
 header {
   width: 100%;
-  height: 80px;
+  height: 55px;
   background-color: #1c1f24;
   color: white;
   margin: auto;
@@ -113,7 +113,7 @@ h1 :after, :before {
  background-size: 100vw 1000px;
  background-repeat: no-repeat;
  text-align: center;
- height: 920px;
+ height: 100vh;
  box-shadow: 2px 2px white;
  background-image: url('https://www.digitalplatforms.co.za/wp-content/uploads/2015/11/Website-Design-Background.png') 
 }
@@ -175,7 +175,7 @@ h2 {
   font-size: 16px;
   color: white;
   cursor: pointer;
-  padding: 30px;
+  padding: 17px 27px;
   letter-spacing: 3.2px;
   text-decoration: none;
   }
@@ -340,8 +340,8 @@ h3 {
   }
 
   .dev-logos {
-    height: 50px;
-    width: 50px;
+    height: 35px;
+    width: 35px;
   }
 
   .dev-logo-container {
@@ -353,7 +353,7 @@ h3 {
   .react {
     margin: -7px 20px;
     box-sizing: border-box;
-    width: 100px;
+    width: 70px;
   }
 
   .fire {
@@ -369,21 +369,21 @@ h3 {
     position: absolute;
     bottom: 0vh;
     z-index: 80;
-    height: 80px;
+    height: 50px;
   }
 
   .scss {
     margin: 00px 10px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    width: 70px;
+    width: 50px;
   }
 
   .postgres {
     margin: 00px 10px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    width: 60px;
+    width: 45px;
   }
 
   @media only screen and (max-width: 600px) {
@@ -438,7 +438,7 @@ h3 {
     }
 
     .menu-main{
-      height: 60px;
+      height: 55px;
     }
 
     .contact-wrapper h2{
