--- a/src/Stateless/Main/Main.css
+++ b/src/Stateless/Main/Main.css
@@ -258,7 +258,7 @@ h3 {
   .contact-top {
     display: flex;
     background: black;
-    height: 470px;
+    height: 350px;
   }
 
   .pic-steph {
@@ -269,20 +269,16 @@ h3 {
   }
 
   .contact-bottom {
-    height: 500px;
+    height: 400px;
     cursor: url(https://maps.gstatic.com/mapfiles/openhand_8_8.cur), default;
     background-color: grey;
   }
 
   .contact-wrapper {
-    height: 850px;
-    padding: 80px 0;
+    height: 90vh;
+    padding: 40px 0;
     background-color: black;
     overflow: hidden;
-  }
-
-  .contact-wrapper h2, h1{
-    margin: 130px 120px;
   }
 
   .black-bgn {
@@ -302,7 +298,7 @@ h3 {
     margin-top: 25px;
     right: 5%;
     background-color: #000000c7;
-    padding: 34px;
+    padding: 25px;
     position: absolute;
     z-index: 32;
     display: flex;
@@ -311,7 +307,7 @@ h3 {
 
   .contact-info h5 {
     color: white;
-    font-size: 23px;
+    font-size: 18px;
     letter-spacing: 2px;
   }
 
